# mediator

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
data/: CMakeLists.txt  bonus.flac  boom.flac  bump.flac  burndt.flac  end.flac  launch.flac  song-bg.flac  song-drums.flac  song-fg.flac  ticklemonster.desktop  warning.flac  win.flac
data/icons/: CMakeLists.txt  icon.rc
data/lollipop/: lost.flac  success.flac
data/riots/: riot.flac  vuvu.flac
data/rockets/: atom.flac  cursor.png2  music
data/sprites/euro/: euro.ini
data/sprites/faces/: center.ini
data/sprites/flag/: brokenru.ini
data/sprites/heart/: heart.ini
data/sprites/loliwin/: end.ini  win.ini
data/sprites/rainbow/: be.ini  shine.ini
data/sprites/rocket/: atom.ini  boom.ini  usa.ini
lib/: CMakeLists.txt
src/: CMakeLists.txt  common.c  common.h  main.c  main.h  utils.c  utils.h
src/gamestates/: CMakeLists.txt  bonus.c  burndt.c  dosowisko.c  info.c  info.h  loading.c  lollipop.c  lollipop.h  menu.c  pause.c  pause.h  riots.c  riots.h  rockets.c  rockets.h  theend.c  theend.h
