SET(DATADIR "${SHARE_INSTALL_PREFIX}/mediator/data")

if(APPLE)
  SET(DATADIR "${BIN_INSTALL_DIR}/mediator.app/Contents/Resources/data") #OMG NASTY
endif(APPLE)

add_subdirectory(icons)
if(UNIX AND NOT APPLE)
  install(FILES mediator.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
endif(UNIX AND NOT APPLE)
install(DIRECTORY sprites DESTINATION ${DATADIR})
install(DIRECTORY fonts DESTINATION ${DATADIR})
install(DIRECTORY lollipop DESTINATION ${DATADIR})
install(DIRECTORY rockets DESTINATION ${DATADIR})
install(DIRECTORY riots DESTINATION ${DATADIR})
install(FILES bg.png DESTINATION ${DATADIR})
install(FILES bonus.flac DESTINATION ${DATADIR})
install(FILES boom.flac DESTINATION ${DATADIR})
install(FILES burndt.flac DESTINATION ${DATADIR})
install(FILES burndt.png DESTINATION ${DATADIR})
install(FILES click.flac DESTINATION ${DATADIR})
install(FILES dosowisko.flac DESTINATION ${DATADIR})
install(FILES end.flac DESTINATION ${DATADIR})
install(FILES kbd.flac DESTINATION ${DATADIR})
install(FILES key.flac DESTINATION ${DATADIR})
install(FILES launch.flac DESTINATION ${DATADIR})
install(FILES light.png DESTINATION ${DATADIR})
install(FILES mouse.png DESTINATION ${DATADIR})
install(FILES song-bg.flac DESTINATION ${DATADIR})
install(FILES song-drums.flac DESTINATION ${DATADIR})
install(FILES song-fg.flac DESTINATION ${DATADIR})
install(FILES title.png DESTINATION ${DATADIR})
install(FILES warning.flac DESTINATION ${DATADIR})
install(FILES win.flac DESTINATION ${DATADIR})
